# sf

./: .dockerignore  .env.example  1.md  2.md  3.md  ARCHITECTURE.md  Dockerfile  XLR.md  alembic.ini  fly.toml  pyproject.toml  readme.md  requirements.txt  step.md
AI_Agents/: README.md
AI_Agents/example/agent_patterns/: agents_as_tools_conditional.py
AI_Agents/example/memory/: advanced_sqlite_session_example.py  dapr_session_example.py  encrypted_session_example.py
AI_Agents/openspec/: checklists.md  project.md
AI_Agents——old/: 1.md
AI_Agents——old/example/agent_patterns/: llm_as_a_judge.py
AI_Agents——old/example/memory/: openai_session_example.py  redis_session_example.py  sqlalchemy_session_example.py
app/: dependencies.py  main.py
app/routes/: ai.py  health.py
backend/ai_agents/: XLR.md
backend/ai_agents/agents/: explainer.py  master_agent.py  orchestrator.py  registry.py
backend/ai_agents/rag/: embedder.py  retriever.py  schemas.py
backend/ai_agents/services/: __init__.py  divination_service.py  memory_service.py  (+3 more)
docs/: CONFIGURATION.md  PROMPTS_AND_FLOW.md
openspec/: project.md
scripts/: demo_cli.py  guihua_test.sh  init_database.py  test_api.py  verify_config.py  verify_deployment.py
tests/: conftest.py  manual_test_xlr.py
tests/e2e/: README.md  test_api_endpoints.py  test_full_divination_flow.py  test_master_agent_flow.py
tests/integration/: test_algorithm_registry.py  test_divination_service.py  test_explainer_agent.py  test_memory_service.py  test_orchestrator_agent.py  test_rag_service.py
tests/unit/: test_liuren_engine.py
(+44 files in other folders)
