[project]
name = "sf"
version = "0.1.0"
description = "玄学大师 AI Agent - 小六壬占卜系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "openai>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "celery>=5.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "e2e: End-to-end tests that use real database and services",
    "slow: Tests that take a long time to run",
]
